# campagna-dnd-western

./: .amber-mapping.json  .env.example  .gitconfig  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.cursor/: mcp.json
ambientazione/: ambientazione-giocatori.md  ambientazione_giocatori.md  caporalato-di-campobrina.md  economia.md  fort-lame.md  geografia.md  geometria-planare.md  razze-e-societa.md  religioni.md  stati-uniti.md  storia.md  tecnomagia.md  terralba.md  tredici-colonie.md  undici-colonie.md  valdoren.md
immagini/: README.md
personaggi/: dora-l-esploratrice.md  grombrindal.md  gud-bender.md  kelvor-rivib.md  leman-russ.md
png/: INDICE.md  abigail-rooke.md  andrew-carver.md  anthony-gillian.md  cip-wenders.md  cornelius-ashford.md  danny-cowell.md  dorothy-mercer.md  elias-barlow.md  eustace-whitmore.md  harlan-pike.md  hector-brannagh.md  jasper-moody.md  josiah-tate.md  lucien-mccullaghan.md  mae-barlow.md  maren-halverson.md  olaf-halverson.md  ruth-barlow.md  sam-crow.md  silas-drummond.md  theodor-strand.md  thomas-caldwell.md  todd-crow.md  virgil-tench.md  yargra-delle-orme-profonde.md
pubblicazione/: README.md  manifest.json
resoconti/: sessione-001.md  sessione-002.md  sessione-003.md  sessione-004.md  sessione-005.md  sessione-006.md  sessione-007.md  sessione-008.md  sessione-009.md  sessione-010.md  sessione-011.md
scripts/: build_public_site.py  normalize_image_assets.py  serve_public_site.py  session_record.sh  transcribe_session_dual.py
sessione/: png-hector-brannagh.md  png-lucien-mccullaghan.md  (+3 more)
(+109 files in other folders)
